# specjam

./: .gitignore  Cargo.toml  FUZZ.md  README.md  build.rs  head.txt  testnet.toml
.github/workflows/: main.yml
codegen/: Cargo.toml  README.md  cli.rs  mod.rs  registry.rs  runner.rs
codegen/src/: lib.rs  registry.rs
codegen/tests/: gen.rs
example/: Cargo.toml  build.rs
src/: cli.rs  lib.rs  runner.rs  section.rs
src/registry/: entry.rs  mod.rs
tests/: parse.rs
