[package]
name = "specjam"
version = "0.0.9"
edition = "2021"
description = "A tool spawns binary runner for testing the JAM spec"
license = "GPL-3.0"
documentation = "https://docs.rs/specjam"
repository = "https://github.com/spacejamapp/specjam"
homepage = "https://github.com/spacejamapp/specjam"
include = ["src", "README.md", "build.rs", "codegen"]

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
serde_json = "1.0.135"
