[package]
name = "spacejam-codegen"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.95"
heck = "0.5.0"
hex = "0.4.3"
paste = "1.0.15"
proc-macro2 = "1.0.92"
quote = "1.0.38"
serde_json = "1.0.135"
syn = { version = "2.0.95", features = ["full"] }

[features]
default = ["tiny"]
tiny = []
full = []
